# Raptor

./: .env.example  .gitignore  DAEMON_REWRITE_PROMPT.md  I18N_IMPLEMENTATION.md  I18N_UPDATED_PAGES.md  README.md  arch.md  docker-compose.prod.yml  docker-compose.yml
api/: .env.example  Cargo.toml  Dockerfile
api/src/: config.rs  email.rs  error.rs  main.rs  middleware.rs  models.rs  seeder.rs
api/src/handlers/: allocations.rs  auth.rs  containers.rs  daemons.rs  databases.rs  flakes.rs  mod.rs  roles.rs  two_factor.rs  users.rs  ws.rs
api/templates/: invite.html  password_reset.html  welcome.html
artifacts/: README.md
artifacts/flakes/: README.md  flake-nodejs-http.json  hytale.json  nodejs.json  paper.json  paper_yolk.json  vanilla.json
artifacts/java/: Dockerfile  build.sh  entrypoint.sh
artifacts/nodejs/: Dockerfile  default-index.js  default-package.json  entrypoint.sh
daemon/: .env.example  Cargo.toml  Dockerfile  INSTALL.md  install.sh  setup-tls.sh  uninstall.sh
daemon/src/: config.rs  database_manager.rs  docker.rs  ftp.rs  handlers.rs  main.rs  models.rs
migrations/: 20240101000000_init.sql  20240102000000_add_email_and_reset.sql  20240104000000_seeder_tracking.sql  20240105000000_permissions_tables.sql  20240106000000_container_resources.sql  20240107000000_user_invites.sql  20240108000000_ip_pools.sql  20240109000000_container_users.sql  20240110000000_fix_allocations.sql  20240111000000_add_stop_command.sql  20240112000000_flakes.sql  20240113000000_daemon_secure.sql  20240114000000_restart_policy.sql  20240115000000_user_databases.sql  20240116000000_redis_support.sql  20240117000000_database_servers_daemon.sql  20240117000000_flake_tty.sql  20240118000000_fix_database_server_hosts.sql  20240118000000_flake_tty_fix.sql  20260201000001_flake_tty_fix.sql  20260201000002_allocation_protocol.sql  20260203000001_two_factor_auth.sql
panel/: .env.example  Dockerfile  package-lock.json  package.json  svelte.config.js  tailwind.config.js
panel/scripts/: check-i18n.sh
panel/src/: app.css  app.html
panel/src/lib/: api.ts  stores.ts  types.ts
panel/src/lib/components/: LocaleSelector.svelte  MonacoEditor.svelte  Select.svelte  UserSearch.svelte  index.ts
panel/src/lib/i18n/: index.ts
panel/src/lib/i18n/locales/: bg.json  de.json  en.json  es.json  fr.json  ru.json  zh.json
panel/src/routes/: +layout.svelte  +page.svelte
panel/src/routes/admin/: +page.svelte
panel/src/routes/admin/allocations/: +page.svelte
panel/src/routes/admin/database-servers/: +page.svelte
panel/src/routes/admin/flakes/: +page.svelte
panel/src/routes/admin/servers/: +page.svelte
panel/src/routes/containers/: +page.svelte
panel/src/routes/daemons/: +page.svelte
panel/src/routes/databases/: +page.svelte
panel/src/routes/invite/: +page.svelte
panel/src/routes/login/: +page.svelte
panel/src/routes/reset-password/: +page.svelte
panel/src/routes/security/: +page.svelte
panel/static/: config.js
scripts/: remove-comments.sh
(+8 files in other folders)
