[package]
name = "raptor-api"
version = "0.1.0"
edition = "2021"


[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono", "rust_decimal"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde"] }
jsonwebtoken = "9"
bcrypt = "0.15"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.11", features = ["json"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
dotenvy = "0.15"
thiserror = "1"
anyhow = "1"
time = "=0.3.36"
# Email functionality
lettre = { version = "0.11", features = ["tokio1-native-tls", "builder", "smtp-transport"] }
rand = "0.8"
# Gravatar support
md5 = "0.7"
